<resources>
    <string name="app_name">NTES</string>
    <string name="action_settings">Settings</string>
    <string name="text_8">Text 8</string>
    <string name="text_7">Text 7</string>
    <string name="text_6">Text 6</string>
    <string name="text_5">Text 5</string>
    <string name="provident_fund">Provident Fund</string>
    <string name="leave_status">Leave Status</string>
    <string name="directory_enquiry">Directory Enquiry</string>
    <string name="training_schedule">Training Schedule</string>
    <string name="keyword_search">Keyword Search</string>
    <string name="show">Show</string>
    <string name="Select_Department">Select Department</string>
    <string name="todo">TODO</string>
    <string name="div_dept">Div/Dept</string>
    <string name="place_period">Place/Period</string>
    <string name="training_name">Training Name</string>
    <string name="select_division">Select A Division</string>
    <string name="select_training_center">Select a Training Center</string>
    <string name="south_eastern_railway">South Eastern Railway</string>
    <string name="back">BACK</string>
    <string name="Individual_Training">Individual Training</string>
</resources>
