<?xml version="1.0" encoding="utf-8"?>



<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2FCAA7"
    android:orientation="vertical"
    tools:context="com.example.supratim.ntes.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="#FFFFFF"

        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" tools:targetApi="lollipop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="18dp"
            android:src="@drawable/serly" android:contentDescription="@string/todo" android:layout_marginStart="5dp" android:layout_marginEnd="18dp" />

    </android.support.v7.widget.Toolbar>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#FFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/keyword_search" />



    <Spinner
        android:id="@+id/spin_Division"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:dropDownVerticalOffset="35dp"
        android:dropDownWidth="match_parent" />



    <Spinner
        android:id="@+id/spin_Department"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:dropDownVerticalOffset="35dp"
        android:dropDownWidth="match_parent" />



    <Button
        android:id="@+id/button"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/txt"/>

</LinearLayout>